--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/crisrc012/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\crobles\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
