--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/FacturaPuntoVenta.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itext5-itextpdf-5.5.12-javadoc.jar=lib\\itext5-itextpdf-5.5.12-javadoc.jar
+file.reference.itext5-itextpdf-5.5.12-sources.jar=lib\\itext5-itextpdf-5.5.12-sources.jar
+file.reference.itext5-itextpdf-5.5.12.jar=lib\\itext5-itextpdf-5.5.12.jar
+file.reference.itext5-xmlworker-5.5.12-sources.jar=lib\\itext5-xmlworker-5.5.12-sources.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.itext5-itextpdf-5.5.12-javadoc.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12-sources.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}:\
+    ${file.reference.itext5-xmlworker-5.5.12-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
