--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,69 @@ file.reference.itext5-itextpdf-5.5.12-javadoc.jar=lib\\itext5-itextpdf-5.5.12-ja
 file.reference.itext5-itextpdf-5.5.12-sources.jar=lib\\itext5-itextpdf-5.5.12-sources.jar
 file.reference.itext5-itextpdf-5.5.12.jar=lib\\itext5-itextpdf-5.5.12.jar
 file.reference.itext5-xmlworker-5.5.12-sources.jar=lib\\itext5-xmlworker-5.5.12-sources.jar
+file.reference.itext7-barcodes-7.0.2-javadoc.jar=lib\\itext7-barcodes-7.0.2-javadoc.jar
+file.reference.itext7-barcodes-7.0.2-sources.jar=lib\\itext7-barcodes-7.0.2-sources.jar
+file.reference.itext7-barcodes-7.0.2.jar=lib\\itext7-barcodes-7.0.2.jar
+file.reference.itext7-font-asian-7.0.2-javadoc.jar=lib\\itext7-font-asian-7.0.2-javadoc.jar
+file.reference.itext7-font-asian-7.0.2.jar=lib\\itext7-font-asian-7.0.2.jar
+file.reference.itext7-forms-7.0.2-javadoc.jar=lib\\itext7-forms-7.0.2-javadoc.jar
+file.reference.itext7-forms-7.0.2-sources.jar=lib\\itext7-forms-7.0.2-sources.jar
+file.reference.itext7-forms-7.0.2.jar=lib\\itext7-forms-7.0.2.jar
+file.reference.itext7-hyph-7.0.2-javadoc.jar=lib\\itext7-hyph-7.0.2-javadoc.jar
+file.reference.itext7-hyph-7.0.2.jar=lib\\itext7-hyph-7.0.2.jar
+file.reference.itext7-io-7.0.2-javadoc.jar=lib\\itext7-io-7.0.2-javadoc.jar
+file.reference.itext7-io-7.0.2-sources.jar=lib\\itext7-io-7.0.2-sources.jar
+file.reference.itext7-io-7.0.2.jar=lib\\itext7-io-7.0.2.jar
+file.reference.itext7-kernel-7.0.2-javadoc.jar=lib\\itext7-kernel-7.0.2-javadoc.jar
+file.reference.itext7-kernel-7.0.2-sources.jar=lib\\itext7-kernel-7.0.2-sources.jar
+file.reference.itext7-kernel-7.0.2.jar=lib\\itext7-kernel-7.0.2.jar
+file.reference.itext7-layout-7.0.2-javadoc.jar=lib\\itext7-layout-7.0.2-javadoc.jar
+file.reference.itext7-layout-7.0.2-sources.jar=lib\\itext7-layout-7.0.2-sources.jar
+file.reference.itext7-layout-7.0.2.jar=lib\\itext7-layout-7.0.2.jar
+file.reference.itext7-pdfa-7.0.2-javadoc.jar=lib\\itext7-pdfa-7.0.2-javadoc.jar
+file.reference.itext7-pdfa-7.0.2-sources.jar=lib\\itext7-pdfa-7.0.2-sources.jar
+file.reference.itext7-pdfa-7.0.2.jar=lib\\itext7-pdfa-7.0.2.jar
+file.reference.itext7-pdftest-7.0.2-javadoc.jar=lib\\itext7-pdftest-7.0.2-javadoc.jar
+file.reference.itext7-pdftest-7.0.2-sources.jar=lib\\itext7-pdftest-7.0.2-sources.jar
+file.reference.itext7-pdftest-7.0.2.jar=lib\\itext7-pdftest-7.0.2.jar
+file.reference.itext7-sign-7.0.2-javadoc.jar=lib\\itext7-sign-7.0.2-javadoc.jar
+file.reference.itext7-sign-7.0.2-sources.jar=lib\\itext7-sign-7.0.2-sources.jar
+file.reference.itext7-sign-7.0.2.jar=lib\\itext7-sign-7.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.itext5-itextpdf-5.5.12-javadoc.jar}:\
     ${file.reference.itext5-itextpdf-5.5.12-sources.jar}:\
     ${file.reference.itext5-itextpdf-5.5.12.jar}:\
-    ${file.reference.itext5-xmlworker-5.5.12-sources.jar}
+    ${file.reference.itext5-xmlworker-5.5.12-sources.jar}:\
+    ${file.reference.itext7-barcodes-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-barcodes-7.0.2-sources.jar}:\
+    ${file.reference.itext7-barcodes-7.0.2.jar}:\
+    ${file.reference.itext7-font-asian-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-font-asian-7.0.2.jar}:\
+    ${file.reference.itext7-forms-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-forms-7.0.2-sources.jar}:\
+    ${file.reference.itext7-forms-7.0.2.jar}:\
+    ${file.reference.itext7-hyph-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-hyph-7.0.2.jar}:\
+    ${file.reference.itext7-io-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-io-7.0.2-sources.jar}:\
+    ${file.reference.itext7-io-7.0.2.jar}:\
+    ${file.reference.itext7-kernel-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-kernel-7.0.2-sources.jar}:\
+    ${file.reference.itext7-kernel-7.0.2.jar}:\
+    ${file.reference.itext7-layout-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-layout-7.0.2-sources.jar}:\
+    ${file.reference.itext7-layout-7.0.2.jar}:\
+    ${file.reference.itext7-pdfa-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-pdfa-7.0.2-sources.jar}:\
+    ${file.reference.itext7-pdfa-7.0.2.jar}:\
+    ${file.reference.itext7-pdftest-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-pdftest-7.0.2-sources.jar}:\
+    ${file.reference.itext7-pdftest-7.0.2.jar}:\
+    ${file.reference.itext7-sign-7.0.2-javadoc.jar}:\
+    ${file.reference.itext7-sign-7.0.2-sources.jar}:\
+    ${file.reference.itext7-sign-7.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
